--- a/web/background/category-edit.html
+++ b/web/background/category-edit.html
@@ -24,12 +24,21 @@
 <body>
 <div class="page-container">
 	<form method="post" class="form form-horizontal" id="form-user-add">
-		<input type="hidden" id="c-id">
+		<input type="hidden" id="i-e-id">
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">
+				<span class="c-red">*</span>
 				排序：</label>
 			<div class="formControls col-xs-6 col-sm-6">
-				<input type="text" class="input-text" value="" placeholder="" id="c-sort" name="product-category-name">
+				<input  id="i-e-sort" type="text" class="input-text" value="" placeholder="请输入正整数" name="sort">
+			</div>
+		</div>
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2">
+				<span class="c-red">*</span>
+				上级分类：</label>
+			<div class="formControls col-xs-6 col-sm-6">
+				<input  id="i-e-pro" type="text" class="input-text" value="" readonly="readonly" placeholder="请输入品牌名称" name="pro">
 			</div>
 		</div>
 		<div class="row cl">
@@ -37,16 +46,7 @@
 				<span class="c-red">*</span>
 				品类名称：</label>
 			<div class="formControls col-xs-6 col-sm-6">
-				<input type="text" class="input-text" value="" placeholder="" id="c-name" name="product-category-name">
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">
-				<span class="c-red">*</span>
-				品类描述：</label>
-			<div class="formControls col-xs-6 col-sm-6">
-				<textarea name="" cols="" rows="" class="textarea"  placeholder="说点什么...最少输入10个字符"></textarea>
-				<p class="textarea-numberbar"><em class="textarea-length">0</em>/100</p>
+				<input  id="i-e-name" type="text" class="input-text" value="" placeholder="请输入名称" onblur="testName()" name="name"><p id="meg"></p>
 			</div>
 		</div>
 		<div class="row cl">
@@ -77,23 +77,55 @@
             return  unescape(r[2]);
         return null;
     }
+
+function getRoot(parentId){
+	var name;
+	$.get(path+"/itemCategory/getRootById.do",{"id":parentId},function (data) {
+		if(data!="false"){
+			$("#i-e-pro").val(data.name);
+		}else {
+            $("#i-e-pro").val("无");
+		}
+	},"json");
+}
 $(function(){
     var id = GetQueryString("id");
-	$.post(path+"/breed/getBreedById.do",
+	$.post(path+"/itemCategory/getItemCategoryById.do",
 		{"id":id},
 		function (data) {
-	    	$("#c-id").val(data.id);
-			$("#c-sort").val(data.sort);
-			$("#c-name").val(data.name);
-			$(".textarea").val(data.content);
-        },"json"
-	)
+			if(data!="false") {
+				$("#i-e-id").val(data.id);
+				$("#i-e-sort").val(data.sort);
+				if(data.parentId!=0){
+				    getRoot(data.parentId);
+				}else {
+                    $("#i-e-pro").val("无");
+				}
+				$("#i-e-name").val(data.name);
+			}
+        },"json");
 });
 
+//验证名称是否存在
+function testName() {
+	$.post(path+"/itemCategory/testName.do",
+		{"name":$("#i-e-name").val()},
+		function (data) {
+			if(data=="true"){
+				$("#meg").text("该品类已添加");
+				$("#meg").css("color","red");
+				var msg=$("#meg").text();
+				console.log(msg);
+			}else {
+				$("#meg").text("该品类未添加");
+				$("#meg").css("color","green");
+			}
+		},"json");
+    }
 
 function edit() {
-	$.post(path+"/breed/editBreed.do",
-		{"id":$("#c-id").val(),"sort":$("#c-sort").val(),"name":$("#c-name").val(),"content":$(".textarea").val()},
+	$.post(path+"/itemCategory/editItemCategory.do",
+		{"id":$("#i-e-id").val(),"sort":$("#i-e-sort").val(),"name":$("#i-e-name").val()},
 		function (data) {
 			if(data=="true"){
 				window.location.href=path+"/background/category-list.html";
