后台商品、轮播图、前台商品展示、首页导航栏

--- a/web/background/picture-list.html
+++ b/web/background/picture-list.html
@@ -41,10 +41,10 @@
 		<!--<button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜图片</button>-->
 		查询
 		<select id="select1">
-			<option value="3">--选择状态--</option>
-			<option value="0">已上架</option>
-			<option value="1">未上架</option>
-			<option value="2">已删除</option>
+			<option value="-1">--选择状态--</option>
+			<option value="1">已上架</option>
+			<option value="2">未上架</option>
+			<option value="3">已删除</option>
 		</select>
 	<!--</div>-->
 	<div class="cl pd-5 bg-1 bk-gray mt-20">
@@ -59,10 +59,10 @@
 				<tr class="text-c">
 					<th width="40"><input name="" type="checkbox" value=""></th>
 					<th width="80">ID</th>
-					<th width="100">分类</th>
+					<th width="100">商品名称</th>
 					<th width="100">封面</th>
 					<th width="100">排序</th>
-					<th width="150">更新时间</th>
+					<th width="150">新增时间</th>
 					<th width="60">发布状态</th>
 					<th width="100">操作</th>
 				</tr>
