--- a/web/forward/home/home.html
+++ b/web/forward/home/home.html
@@ -96,7 +96,7 @@
                         <div class="category-content" id="guide_2">
                             <div class="category" style="box-shadow:none ;margin-top: 2px;height: 450px">
                                 <ul class="category-list navTwo" id="js_climit_li">
-                                    <li>
+                                    <!--<li>
                                         <div class="category-info">
                                             <h3 class="category-name b-category-name"><i><img src="../images/phone.jpg"></i><a class="ml-22" title="点心">小米</a></h3>
                                             <em>&gt;</em>
@@ -378,7 +378,7 @@
                                             </div>
                                         </div>
                                         <b class="arrow"></b>
-                                    </li>
+                                    </li>-->
                                 </ul>
                             </div>
                         </div>
@@ -443,7 +443,7 @@
 					}
 				</script>
 			</div>
-            <div class="f3">
+            <!--<div class="f3">
                 <div class="am-container " >
                     <div class="shopTitle ">
                         <h4 class="floor-title">小米</h4>
@@ -465,7 +465,6 @@
                                 <div class="sub-title ">
                                     ¥2200
                                 </div>
-
                             </div>
                             <a href="# "><img style="width: 180px;height: 230px;" src="../images/1.jpg" /></a>
                         </div>
@@ -1291,9 +1290,9 @@
                 </li>
             </div>
             <div class="clear "></div>
-        </div>
+        </div>-->
 
-            <div class="footer ">
+            <div id="showItem" class="footer ">
                 <div class="footer-hd ">
                     <p>
                         <a href="# ">领航手机商城</a>
@@ -1375,5 +1374,5 @@
 		</script>
 		<script type="text/javascript " src="../basic/js/quick_links.js "></script>
 	</body>
-
+<script src="../myjs/item.js"></script>
 </html>
