--- a/web/forward/home/register.html
+++ b/web/forward/home/register.html
@@ -76,7 +76,7 @@
 		<div class="footer ">
 			<div class="footer-hd ">
 				<p>
-					<a href="# ">恒望科技</a>
+					<a href="# ">领航商城</a>
 					<b>|</b>
 					<a href="# ">商城首页</a>
 				</p>
