--- a/web/background/product-add.html
+++ b/web/background/product-add.html
@@ -17,7 +17,10 @@
 <link rel="stylesheet" type="text/css" href="static/h-ui/css/H-ui.min.css" />
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/H-ui.admin.css" />
 <link rel="stylesheet" type="text/css" href="lib/Hui-iconfont/1.0.8/iconfont.css" />
-
+	<!-- 配置文件 -->
+	<script type="text/javascript" src="/background/lib/ueditor/1.4.3/ueditor.config.js"></script>
+	<!-- 编辑器源码文件 -->
+	<script type="text/javascript" src="/background/lib/ueditor/1.4.3/ueditor.all.js"></script>
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/skin/default/skin.css" id="skin" />
 <link rel="stylesheet" type="text/css" href="static/h-ui.admin/css/style.css" />
 <!--[if IE 6]>
@@ -81,7 +84,7 @@
 			<div class="formControls col-xs-8 col-sm-9">
 				<script id="editor" type="text/plain" style="width:100%;height:400px;"/>
                 <script>
-					UE.getEditor('editor');
+					var ue=UE.getEditor('editor');
 				</script>
 			</div>
 		</div>
