--- a/web/forward/home/home.html
+++ b/web/forward/home/home.html
@@ -80,11 +80,11 @@
 			    <div class="bannerTwo" style="width: 1010px;">
                     <!--轮播 -->
                     <div class="am-slider am-slider-default scoll" data-am-flexslider id="demo-slider-0">
-                        <ul class="am-slides">
-                            <li class="banner1"><a href="introduction.html"><img src="../images/ad5.jpg" /></a></li>
-                            <li class="banner2"><a><img src="../images/ad6.jpg" /></a></li>
-                            <li class="banner3"><a><img src="../images/ad7.jpg" /></a></li>
-                            <li class="banner4"><a><img src="../images/ad8.jpg" /></a></li>
+                        <ul id="h-round" class="am-slides">
+                           	<li id="h-banner0" class="banner1"></li>
+							<li id="h-banner1" class="banner2"></li>
+                           	<li id="h-banner2" class="banner3"></li>
+                           	<li id="h-banner3" class="banner4"></li>
                         </ul>
                     </div>
                     <div class="clear"></div>
