--- a/web/forward/home/introduction.html
+++ b/web/forward/home/introduction.html
@@ -20,7 +20,6 @@
 		<script type="text/javascript" src="../js/jquery.imagezoom.min.js"></script>
 		<script type="text/javascript" src="../js/jquery.flexslider.js"></script>
 		<script type="text/javascript" src="../js/list.js"></script>
-		<script type="text/javascript" src="../myjs/index.js"></script>
 	</head>
 
 	<body>
@@ -38,7 +37,7 @@
 			</ul>
 			<ul class="message-r">
 				<div class="topMessage home">
-					<div class="menu-hd"><a href="home3.html" target="_top" class="h">商城首页</a></div>
+					<div class="menu-hd"><a href="home.html" target="_top" class="h">商城首页</a></div>
 				</div>
 				<div class="topMessage my-shangcheng">
 					<div class="menu-hd MyShangcheng"><a href="../person/index.html" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
@@ -74,7 +73,7 @@
 					   <div class="long-title"><span class="all-goods">全部分类</span></div>
 					   <div class="nav-cont">
 							<ul>
-								<li class="index"><a href="home3.html">首页</a></li>
+								<li class="index"><a href="home.html">首页</a></li>
                                 <!--<li class="qc"><a href="#">闪购</a></li>-->
                                 <!--<li class="qc"><a href="#">限时抢</a></li>-->
                                 <!--<li class="qc"><a href="#">团购</a></li>-->
@@ -105,17 +104,17 @@
 				<div class="scoll">
 					<section class="slider">
 						<div class="flexslider">
-							<ul class="slides">
-								<!--<li>-->
-									<!--<img src="../images/01.jpg" title="pic" />-->
-								<!--</li>-->
-								<!--<li>-->
-									<!--<img src="../images/02.jpg" />-->
-								<!--</li>-->
-								<!--<li>-->
-									<!--<img src="../images/03.jpg" />-->
-								<!--</li>-->
-							</ul>
+							<!--<ul class="slides">
+								<li>
+									<img src="../images/01.jpg" title="pic" />
+								</li>
+								<li>
+									<img src="../images/02.jpg" />
+								</li>
+								<li>
+									<img src="../images/03.jpg" />
+								</li>
+							</ul>-->
 						</div>
 					</section>
 				</div>
@@ -171,15 +170,14 @@
 						</div>
 						<div class="tb-detail-list">
 							<!--价格-->
-							<div class="tb-detail-price">
-								<!--<li class="price iteminfo_price">-->
-									<!--<dt>促销价</dt>-->
-									<!--<dd><em>¥</em><b class="sys_item_price">56.90</b>  </dd>                                 -->
-								<!--</li>-->
-								<!--<li class="price iteminfo_mktprice">-->
-									<!--<dt>原价</dt>-->
-									<!--<dd><em>¥</em><b class="sys_item_mktprice">98.00</b></dd>									-->
-								<!--</li>-->
+							<div class="tb-detail-price" style="padding-top: 20px">
+								<li class="price iteminfo_price">
+									<dd><b id="item-sell" class="sys_item_price" style="font-size: 18px;color: #000;"></b>  </dd>
+								</li>
+								<li class="price iteminfo_mktprice">
+									<dt>价格</dt>
+									<dd  class="sys_item_price"><em style="font-size: 22px;color: red">¥</em><b id="item-price" style="color: red;font-size: 22px"></b></dd>
+								</li>
 								<div class="clear"></div>
 							</div>
 
@@ -261,30 +259,30 @@
 
 												<div class="theme-signin-left">
 
-													<!--<div class="theme-options">-->
-														<!--<div class="cart-title">口味</div>-->
-														<!--<ul>-->
-															<!--<li class="sku-line selected">原味<i></i></li>-->
-															<!--<li class="sku-line">奶油<i></i></li>-->
-															<!--<li class="sku-line">炭烧<i></i></li>-->
-															<!--<li class="sku-line">咸香<i></i></li>-->
-														<!--</ul>-->
-													<!--</div>-->
-													<!--<div class="theme-options">-->
-														<!--<div class="cart-title">包装</div>-->
-														<!--<ul>-->
-															<!--<li class="sku-line selected">手袋单人份<i></i></li>-->
-															<!--<li class="sku-line">礼盒双人份<i></i></li>-->
-															<!--<li class="sku-line">全家福礼包<i></i></li>-->
-														<!--</ul>-->
-													<!--</div>-->
+													<div class="theme-options" style="height: 40px">
+														<div class="cart-title">机身颜色</div>
+														<ul id="fuselage-color">
+															<!--<li class="sku-line selected">原味<i></i></li>
+															<li class="sku-line">奶油<i></i></li>
+															<li class="sku-line">炭烧<i></i></li>
+															<li class="sku-line">咸香<i></i></li>-->
+														</ul>
+													</div>
+													<div class="theme-options" style="height: 40px">
+														<div class="cart-title">存储容量</div>
+														<ul id="storage-capacity">
+															<!--<li class="sku-line selected">手袋单人份<i></i></li>
+															<li class="sku-line">礼盒双人份<i></i></li>
+															<li class="sku-line">全家福礼包<i></i></li>-->
+														</ul>
+													</div>
 													<div class="theme-options">
 														<div class="cart-title number">数量</div>
 														<dd>
 															<input id="min" class="am-btn am-btn-default" name="" type="button" value="-" />
 															<input id="text_box" name="" type="text" value="1" style="width:30px;" />
 															<input id="add" class="am-btn am-btn-default" name="" type="button" value="+" />
-															<span id="Stock1" class="tb-hidden">库存<span class="stock"></span>件</span>
+															<span id="Stock1" class="tb-hidden">库存<span id="item-num" class="stock"></span>台</span>
 														</dd>
 													</div>
 
@@ -296,20 +294,19 @@
 													</div>
 												</div>
 
-												<!--<div class="theme-signin-right">-->
-													<!--<div class="img-info">-->
-														<!--<img src="../images/songzi.jpg" />-->
-													<!--</div>-->
-													<!--<div class="text-info">-->
-														<!--<span class="J_Price price-now">¥39.00</span>-->
-														<!--<span id="Stock" class="tb-hidden">库存<span class="stock">1000</span>件</span>-->
-													<!--</div>-->
-												<!--</div>-->
+												<div class="theme-signin-right">
+													<div class="img-info">
+														<img src="../images/songzi.jpg" />
+													</div>
+													<div class="text-info">
+														<span class="J_Price price-now">¥39.00</span>
+														<span id="Stock" class="tb-hidden">库存<span class="stock">1000</span>件</span>
+													</div>
+												</div>
 
 											</form>
 										</div>
 									</div>
-
 								</dd>
 							</dl>
 							<div class="clear"></div>
@@ -393,12 +390,12 @@
 				<div class="introduce">
 					<div class="browse">
 					    <div class="mc"> 
-						     <ul>					    
+						     <ul id="item-list">
 						     	<div class="mt">            
 						            <h2>看了又看</h2>        
 					            </div>
 						     	
-							      <li class="first">
+							      <!--<li class="first">
 							      	<div class="p-img">                    
 							      		<a  href="#"> <img class="" src="../images/browse1.jpg"> </a>               
 							      	</div>
@@ -447,7 +444,7 @@
 							      	</a>
 							      	</div>
 							      	<div class="p-price"><strong>￥35.90</strong></div>
-							      </li>							      
+							      </li>	-->
 					      
 						     </ul>					
 					    </div>
@@ -465,21 +462,21 @@
 								<li>
 									<a href="#">
 
-										<span class="index-needs-dt-txt">全部评价</span></a>
-
+										<span class="index-needs-dt-txt">参数规格</span></a>
 								</li>
 
 								<li>
 									<a href="#">
 
-										<span class="index-needs-dt-txt">猜你喜欢</span></a>
+										<span class="index-needs-dt-txt">全部评价</span></a>
+
 								</li>
 							</ul>
 
 							<div class="am-tabs-bd">
 
-								<div class="am-tab-panel am-fade am-in am-active">
-									<div class="J_Brand">
+								<div id="i-descript" class="am-tab-panel am-fade am-in am-active">
+									<!--<div class="J_Brand">
 
 										<div class="attr-list-hd tm-clear">
 											<h4>产品参数：</h4></div>
@@ -512,7 +509,7 @@
 											<img src="../images/tw6.jpg" />
 											<img src="../images/tw7.jpg" />
 										</div>
-									</div>
+									</div>-->
 									<div class="clear"></div>
 
 								</div>
@@ -997,7 +994,15 @@
 									<div class="clear"></div>
 
 									<div class="tb-reviewsft">
-										<div class="tb-rate-alert type-attention">购买前请查看该商品的 <a href="#" target="_blank">购物保障</a>，明确您的售后保障权益。</div>
+										<table style="border: #dfdfdf solid 1px; width: 100%">
+											<thead style="font-weight: 700;font-size: 14px;color: #999;background-color: #eee">
+											<tr>
+												<th style="padding:5px;padding-left: 20px;border-bottom: 1px solid #e5e5e5;" colspan="2">规格参数</th>
+											</tr>
+											</thead>
+											<tbody id="tb">
+											</tbody>
+										</table>
 									</div>
 
 								</div>
@@ -1164,9 +1169,9 @@
 						<div class="footer">
 							<div class="footer-hd">
 								<p>
-									<a href="#">恒望科技</a>
+									<a href="# ">领航手机商城</a>
 									<b>|</b>
-									<a href="#">商城首页</a>
+									<a href="# ">商城首页</a>
 								</p>
 							</div>
 							<div class="footer-bd">
@@ -1236,5 +1241,5 @@
 				</div>
 			</div>
 	</body>
-
+<script src="../myjs/iteminfo.js"></script>
 </html>
