--- a/web/forward/home/introduction.html
+++ b/web/forward/home/introduction.html
@@ -20,6 +20,34 @@
 		<script type="text/javascript" src="../js/jquery.imagezoom.min.js"></script>
 		<script type="text/javascript" src="../js/jquery.flexslider.js"></script>
 		<script type="text/javascript" src="../js/list.js"></script>
+		<style type="text/css">
+			.head-th{
+				text-align: left;
+				color: #404040;
+				background-color: #f7f7f7;
+				font-weight: 700;
+				font-size:12px;
+				border-top: 1px solid #e5e5e5;
+				border-right: 1px solid #e5e5e5;
+				padding: 5px 5px 5px 20px
+			}
+			.body-th{
+				border-right: 1px solid #f7f7f7;
+				border-top: 1px solid #f7f7f7;
+				padding: 5px 5px 5px 20px;
+				color: #999;
+				font-weight: 400;
+				font-size: 12px;
+				text-align: right;
+				width:22%;
+			}
+			.body-td{
+				border-top: 1px solid #f7f7f7;
+				padding: 5px;
+				font-size: 12px;
+				text-align: left
+			}
+		</style>
 	</head>
 
 	<body>
