收货地址、配送费

--- a/web/background/dispatch-add.html
+++ b/web/background/dispatch-add.html
@@ -78,7 +78,7 @@
 		<div class="row cl">
 			<div class="col-9 col-offset-2">
 				<a id="c-a-submit" onclick="addDispatch()" class="btn btn-primary radius">保存</a>
-				<a href="" class="btn btn-primary radius">返回</a>
+				<a href="dispatch-list.html" class="btn btn-primary radius">返回</a>
 			</div>
 		</div>
 		<p id="msg3"></p>
