--- a/web/background/dispatch-edit.html
+++ b/web/background/dispatch-edit.html
@@ -62,7 +62,7 @@
 		<div class="row cl">
 			<div class="col-9 col-offset-2">
 				<a id="d-e-submit" class="btn btn-primary radius">保存</a>
-				<a href="" class="btn btn-primary radius">返回</a>
+				<a href="dispatch-list.html" class="btn btn-primary radius">返回</a>
 			</div>
 		</div>
 		<p id="msg3"></p>
