--- a/web/forward/home/search.html
+++ b/web/forward/home/search.html
@@ -155,14 +155,14 @@
 							<div class="search-content">
 								<div class="sort">
 									<li class="first"><a title="综合">综合排序</a></li>
-									<li><a title="销量">销量排序</a></li>
+									<!--<li><a title="销量">销量排序</a></li>
 									<li><a title="价格">价格优先</a></li>
-									<li class="big"><a title="评价" href="#">评价为主</a></li>
+									<li class="big"><a title="评价" href="#">评价为主</a></li>-->
 								</div>
 								<div class="clear"></div>
 
-								<ul class="am-avg-sm-2 am-avg-md-3 am-avg-lg-4 boxes">
-									<li>
+								<ul id="item-all" class="am-avg-lg-4">
+									<!--<li>
 										<div class="i-pic limit">
 											<img src="../images/imgsearch1.jpg" />											
 											<p class="title fl">【良品铺子旗舰店】手剥松子218g 坚果炒货零食新货巴西松子包邮</p>
@@ -328,10 +328,10 @@
 												销量<span>1110</span>
 											</p>
 										</div>
-									</li>
+									</li>-->
 								</ul>
 							</div>
-							<div class="search-side">
+							<!--<div class="search-side">
 
 								<div class="side-title">
 									经典搭配
@@ -377,7 +377,7 @@
 									</div>
 								</li>
 
-							</div>
+							</div>-->
 							<div class="clear"></div>
 							<!--分页 -->
 							<ul class="am-pagination am-pagination-right">
@@ -590,8 +590,7 @@
 		</script>
 		<script type="text/javascript" src="../basic/js/quick_links.js"></script>
 
-<div class="theme-popover-mask"></div>
-
+	<div class="theme-popover-mask"></div>
 	</body>
-
+<script src="../myjs/search.js"></script>
 </html>
