--- a/web/background/order-evrify.html
+++ b/web/background/order-evrify.html
@@ -37,8 +37,9 @@
 					<th width="80">商品编号</th>
 					<th width="150">封面</th>
 					<th width="100">商品名称</th>
+					<th width="80">颜色</th>
+					<th width="80">内存</th>
 					<th width="80">单价</th>
-					<th width="80">重量</th>
 					<th width="80">数量</th>
 				</tr>
 				</thead>
@@ -79,6 +80,6 @@
 <script type="text/javascript" src="lib/jquery.validation/1.14.0/jquery.validate.js"></script>
 <script type="text/javascript" src="lib/jquery.validation/1.14.0/validate-methods.js"></script>
 <script type="text/javascript" src="lib/jquery.validation/1.14.0/messages_zh.js"></script>
-<script src="myjs/orderdetail.js"></script>
+<script src="myjs/orderItem.js"></script>
 </body>
 </html>
