--- a/web/forward/home/pay.html
+++ b/web/forward/home/pay.html
@@ -484,7 +484,7 @@
 			<div class="am-form-group">
 				<label for="user-phone" class="am-form-label">手机号码</label>
 				<div class="am-form-content">
-					<input id="user-phone" placeholder="手机号必填" type="email">
+					<input id="user-phone" placeholder="手机号必填" type="text">
 				</div>
 			</div>
 
@@ -492,24 +492,18 @@
 				<label for="user-phone" class="am-form-label">所在地</label>
 				<div class="am-form-content address">
 					<div>
-						<select id="s_province" name="s_province"></select>
-						<select id="s_city" name="s_city" ></select>
-						<select id="s_county" name="s_county"></select>
-						<script class="resources library" src="http://sandbox.runjs.cn/uploads/rs/267/g3ugugjp/area.js" type="text/javascript"></script>
-
-						<script type="text/javascript">_init_area();</script>
+						<select id="ad-pro" name="s_province">
+							<option value="-1">选择省</option>
+						</select>
+						<select id="ad-city" name="s_city" >
+							<option value="-1">选择市</option>
+						</select>
+						<select id="ad-area" name="s_county">
+							<option value="-1">选择县区</option>
+						</select>
 					</div>
 					<div id="show"></div>
 				</div>
-				<script type="text/javascript">
-                    var Gid  = document.getElementById ;
-                    var showArea = function(){
-                        Gid('show').innerHTML = "<h3>省" + Gid('s_province').value + " - 市" +
-                            Gid('s_city').value + " - 县/区" +
-                            Gid('s_county').value + "</h3>"
-                    }
-                    Gid('s_county').setAttribute('onchange','showArea()');
-				</script>
 			</div>
 
 			<div class="am-form-group">
@@ -518,6 +512,11 @@
 					<textarea class="" rows="3" id="user-intro" placeholder="输入详细地址"></textarea>
 					<small>100字以内写出你的详细地址...</small>
 				</div>
+			</div>
+
+			<label for="user-code" class="am-form-label">邮政编码</label>
+			<div class="am-form-content">
+				<input type="text" id="user-code" placeholder="邮政编码">
 			</div>
 
 			<div class="am-form-group theme-poptit">
