--- a/web/forward/home/shopcart.html
+++ b/web/forward/home/shopcart.html
@@ -96,7 +96,7 @@
 			<div class="bundle  bundle-last ">
 				<div class="bundle-hd">
 					<div class="bd-promos">
-						<div class="bd-has-promo">已享优惠:<span class="bd-has-promo-content">省￥19.50</span>&nbsp;&nbsp;</div>
+						<div class="bd-has-promo"><!--已享优惠:<span class="bd-has-promo-content">省￥19.50</span>&nbsp;&nbsp;--></div>
 						<!--<div class="act-promo">-->
 						<!--<a href="#" target="_blank">第二支半价，第三支免费<span class="gt">&gt;&gt;</span></a>-->
 						<!--</div>-->
@@ -423,7 +423,7 @@
 		</form>
 	</div>
 </div>
-<script type="text/javascript" src="../myjs/shopcart.js"></script>
+<script type="text/javascript" src="../myjs/shopcar.js"></script>
  <!--引导 -->
 <div class="navCir">
 	<li><a href="home.html"><i class="am-icon-home "></i>首页</a></li>
