--- a/web/background/login.html
+++ b/web/background/login.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
   <script>DD_belatedPNG.fix('*');</script>
   <![endif]-->
-  <title>后台登录 - H-ui.admin v3.1</title>
+  <title>领航商城-后台登录</title>
   <meta name="keywords" content="H-ui.admin v3.1,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
   <meta name="description" content="H-ui.admin v3.1，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
 </head>
@@ -67,7 +67,7 @@
   </div>
 </div>
 </div>
-<div class="footer">牧草商城后台登录</div>
+<div class="footer">领航手机商城后台登录</div>
 <script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="static/h-ui/js/H-ui.min.js"></script>
 <script type="text/javascript" src="myjs/conservator.js"></script>
