--- a/web/forward/home/shopcart.html
+++ b/web/forward/home/shopcart.html
@@ -56,7 +56,7 @@
 		<a name="index_none_header_sysc" href="#"></a>
 		<form>
 			<input id="searchInput" name="index_none_header_sysc" type="text" placeholder="搜索" autocomplete="off">
-			<input id="ai-topsearch" class="submit am-btn" value="搜索" index="1" type="submit">
+			<input id="ai-topsearch" class="submit am-btn" value="搜索" index="1" type="button">
 		</form>
 	</div>
 </div>
@@ -348,9 +348,9 @@
 	<div class="footer">
 		<div class="footer-hd">
 			<p>
-				<a href="#">恒望科技</a>
+				<a href="# ">领航手机商城</a>
 				<b>|</b>
-				<a href="#">商城首页</a>
+				<a href="# ">商城首页</a>
 			</p>
 		</div>
 		<div class="footer-bd">
