--- a/web/background/welcome.html
+++ b/web/background/welcome.html
@@ -22,8 +22,9 @@
 <title>我的桌面</title>
 </head>
 <body>
-<div class="page-container">
-	<p class="f-20 text-success">欢迎使用H-ui.admin <span class="f-14">v3.1</span>后台模版！</p>
+<div class="page-container" style="padding: 0px">
+	<img src="static/h-ui.admin/images/87b1OOOPIC3b.jpg" width="100%" style="margin-top: -100px">
+	<!--<p class="f-20 text-success">欢迎使用H-ui.admin <span class="f-14">v3.1</span>后台模版！</p>
 	<p>登录次数：18 </p>
 	<p>上次登录IP：222.35.131.79.1  上次登录时间：2014-6-14 11:19:55</p>
 	<table class="table table-border table-bordered table-bg">
@@ -183,7 +184,7 @@
 				<td>NETWORK SERVICE</td>
 			</tr>
 		</tbody>
-	</table>
+	</table>-->
 </div>
 <footer class="footer mt-20">
 	<div class="container">
