--- a/web/forward/home/success.html
+++ b/web/forward/home/success.html
@@ -26,7 +26,7 @@
      </div></div>
   </ul>
   <ul class="message-r">
-    <div class="topMessage home"><div class="menu-hd"><a href="home3.html" target="_top" class="h">商城首页</a></div></div>
+    <div class="topMessage home"><div class="menu-hd"><a href="home.html" target="_top" class="h">商城首页</a></div></div>
     <div class="topMessage my-shangcheng"><div class="menu-hd MyShangcheng"><a href="../person/index.html" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div></div>
     <div class="topMessage mini-cart"><div class="menu-hd"><a id="mc-menu-hd" href="shopcart.html" target="_top"><i class="am-icon-shopping-cart  am-icon-fw"></i><span>购物车</span><strong id="J_MiniCartNum" class="h">0</strong></a></div></div>
     <div class="topMessage favorite"><div class="menu-hd">
@@ -47,7 +47,7 @@
         <a name="index_none_header_sysc" href="#"></a>       
         <form>
         <input id="searchInput" name="index_none_header_sysc" type="text" placeholder="搜索" autocomplete="off">
-        <input id="ai-topsearch" class="submit" value="搜索" index="1" type="submit"></form>
+        <input id="ai-topsearch" class="submit" value="搜索" index="1" type="button"></form>
     </div>     
 </div>
 
@@ -71,7 +71,7 @@
      <div class="option">
        <span class="info">您可以</span>
         <a href="../person/order.html" class="J_MakePoint">查看<span>已买到的宝贝</span></a>
-        <a href="../person/orderinfo.html" class="J_MakePoint">查看<span>交易详情</span></a>
+        <a id="orderinfo" class="J_MakePoint">查看<span>交易详情</span></a>
      </div>
     </div>
   </div>
