--- a/web/forward/person/address.html
+++ b/web/forward/person/address.html
@@ -34,7 +34,7 @@
 						</ul>
 						<ul class="message-r">
 							<div class="topMessage home">
-								<div class="menu-hd"><a href="../home/home3.html" target="_top" class="h">商城首页</a></div>
+								<div class="menu-hd"><a href="../home/home.html" target="_top" class="h">商城首页</a></div>
 							</div>
 							<div class="topMessage my-shangcheng">
 								<div class="menu-hd MyShangcheng"><a href="index.html" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
@@ -74,7 +74,7 @@
 			<div class="long-title"><span class="all-goods">全部分类</span></div>
 			<div class="nav-cont">
 				<ul>
-					<li class="index"><a href="../home/home3.html">首页</a></li>
+					<li class="index"><a style="width: 200px" href="../home/home.html">首页</a></li>
 					<!--<li class="qc"><a href="#">闪购</a></li>-->
 					<!--<li class="qc"><a href="#">限时抢</a></li>-->
 					<!--<li class="qc"><a href="#">团购</a></li>-->
@@ -259,22 +259,17 @@
 				<div class="footer">
 					<div class="footer-hd">
 						<p>
-							<a href="#">恒望科技</a>
+							<a href="# ">领航手机商城</a>
 							<b>|</b>
-							<a href="#">商城首页</a>
-							<b>|</b>
-							<a href="#">支付宝</a>
-							<b>|</b>
-							<a href="#">物流</a>
+							<a href="# ">商城首页</a>
 						</p>
 					</div>
 					<div class="footer-bd">
 						<p>
-							<a href="#">关于恒望</a>
-							<a href="#">合作伙伴</a>
-							<a href="#">联系我们</a>
-							<a href="#">网站地图</a>
-							<em>© 2015-2025 Hengwang.com 版权所有</em>
+							<a href="# ">关于领航</a>
+							<a href="# ">合作伙伴</a>
+							<a href="# ">联系我们</a>
+							<em>© 2018-2025 navigation.com 版权所有</em>
 						</p>
 					</div>
 				</div>
@@ -291,7 +286,7 @@
 							<li> <a href="information.html">个人信息</a></li>
 							<li> <a href="safety.html">安全设置</a></li>
 							<li> <a href="address.html">地址管理</a></li>
-							<li> <a href="cardlist.html">快捷支付</a></li>
+							<!--<li> <a href="cardlist.html">快捷支付</a></li>-->
 						</ul>
 					</li>
 					<li class="person">
@@ -302,16 +297,16 @@
 							<li> <a href="comment.html">评价商品</a></li>
 						</ul>
 					</li>
-					<li class="person">
+					<!--<li class="person">
 						<p><i class="am-icon-dollar"></i>我的资产</p>
 						<ul>
-							<!--<li> <a href="points.html">我的积分</a></li>
+							&lt;!&ndash;<li> <a href="points.html">我的积分</a></li>
 							<li> <a href="coupon.html">优惠券 </a></li>
-							<li> <a href="bonus.html">红包</a></li>-->
+							<li> <a href="bonus.html">红包</a></li>&ndash;&gt;
 							<li> <a href="walletlist.html">账户余额</a></li>
 							<li> <a href="bill.html">账单明细</a></li>
 						</ul>
-					</li>
+					</li>-->
 
 					<!--<li class="person">
 						<p><i class="am-icon-tags"></i>我的收藏</p>
@@ -321,7 +316,7 @@
 						</ul>
 					</li>-->
 
-					<li class="person">
+					<!--<li class="person">
 						<p><i class="am-icon-qq"></i>在线客服</p>
 						<ul>
 							<li> <a href="consultation.html">商品咨询</a></li>
@@ -329,7 +324,7 @@
 							
 							<li> <a href="news.html">我的消息</a></li>
 						</ul>
-					</li>
+					</li>-->
 				</ul>
 
 			</aside>
