--- a/web/forward/person/index.html
+++ b/web/forward/person/index.html
@@ -32,7 +32,7 @@
 						</ul>
 						<ul class="message-r">
 							<div class="topMessage home">
-								<div class="menu-hd"><a href="../home/home3.html" target="_top" class="h">商城首页</a></div>
+								<div class="menu-hd"><a href="../home/home.html" target="_top" class="h">商城首页</a></div>
 							</div>
 							<div class="topMessage my-shangcheng">
 								<div class="menu-hd MyShangcheng"><a href="index.html" target="_top"><i class="am-icon-user am-icon-fw"></i>个人中心</a></div>
@@ -54,7 +54,7 @@
 								<a name="index_none_header_sysc" href="#"></a>
 								<form>
 									<input id="searchInput" name="index_none_header_sysc" type="text" placeholder="搜索" autocomplete="off">
-									<input id="ai-topsearch" class="submit am-btn" value="搜索" index="1" type="submit">
+									<input id="ai-topsearch" class="submit am-btn" value="搜索" index="1" type="button">
 								</form>
 							</div>
 						</div>
@@ -68,7 +68,7 @@
 			<div class="long-title"><span class="all-goods">全部分类</span></div>
 			<div class="nav-cont">
 				<ul>
-					<li class="index"><a href="../home/home3.html">首页</a></li>
+					<li class="index"><a href="../home/home.html">首页</a></li>
 					<!--<li class="qc"><a href="#">闪购</a></li>-->
 					<!--<li class="qc"><a href="#">限时抢</a></li>-->
 					<!--<li class="qc"><a href="#">团购</a></li>-->
@@ -466,9 +466,9 @@
 				<div class="footer">
 					<div class="footer-hd">
 						<p>
-							<a href="#">恒望科技</a>
+							<a href="# ">领航手机商城</a>
 							<b>|</b>
-							<a href="#">商城首页</a>
+							<a href="# ">商城首页</a>
 						</p>
 					</div>
 					<div class="footer-bd">
@@ -494,7 +494,7 @@
 							<li> <a href="information.html">个人信息</a></li>
 							<li> <a href="safety.html">安全设置</a></li>
 							<li> <a href="address.html">地址管理</a></li>
-							<li> <a href="cardlist.html">快捷支付</a></li>
+							<!--<li> <a href="cardlist.html">快捷支付</a></li>-->
 						</ul>
 					</li>
 					<li class="person">
@@ -505,16 +505,16 @@
 							<li> <a href="comment.html">评价商品</a></li>
 						</ul>
 					</li>
-					<li class="person">
+					<!--<li class="person">
 						<p><i class="am-icon-dollar"></i>我的资产</p>
 						<ul>
-							<!--<li> <a href="points.html">我的积分</a></li>
+							&lt;!&ndash;<li> <a href="points.html">我的积分</a></li>
 							<li> <a href="coupon.html">优惠券 </a></li>
-							<li> <a href="bonus.html">红包</a></li>-->
+							<li> <a href="bonus.html">红包</a></li>&ndash;&gt;
 							<li> <a href="walletlist.html">账户余额</a></li>
 							<li> <a href="bill.html">账单明细</a></li>
 						</ul>
-					</li>
+					</li>-->
 
 					<!--<li class="person">
 						<p><i class="am-icon-tags"></i>我的收藏</p>
@@ -524,15 +524,15 @@
 						</ul>
 					</li>-->
 
-					<li class="person">
+					<!--<li class="person">
 						<p><i class="am-icon-qq"></i>在线客服</p>
 						<ul>
 							<li> <a href="consultation.html">商品咨询</a></li>
-							<li> <a href="suggest.html">意见反馈</a></li>							
-							
+							<li> <a href="suggest.html">意见反馈</a></li>
+
 							<li> <a href="news.html">我的消息</a></li>
 						</ul>
-					</li>
+					</li>-->
 				</ul>
 
 			</aside>
